RESOLVED FIXED124773
[WinCairo] Compile error when ACCELERATED_COMPOSITING is not used.
https://bugs.webkit.org/show_bug.cgi?id=124773
Summary [WinCairo] Compile error when ACCELERATED_COMPOSITING is not used.
peavo
Reported 2013-11-22 07:22:09 PST
WebCore/rendering/RenderView.cpp is missing a USE(ACCELERATED_COMPOSITING) guard.
Attachments
Patch (1.37 KB, patch)
2013-11-22 07:28 PST, peavo
no flags
peavo
Comment 1 2013-11-22 07:28:49 PST
Brent Fulgham
Comment 2 2013-11-22 07:33:27 PST
Comment on attachment 217680 [details] Patch R=me
peavo
Comment 3 2013-11-22 07:35:05 PST
(In reply to comment #2) > (From update of attachment 217680 [details]) > R=me Thanks :)
WebKit Commit Bot
Comment 4 2013-11-22 07:59:22 PST
Comment on attachment 217680 [details] Patch Clearing flags on attachment: 217680 Committed r159688: <http://trac.webkit.org/changeset/159688>
WebKit Commit Bot
Comment 5 2013-11-22 07:59:23 PST
All reviewed patches have been landed. Closing bug.
Alex Christensen
Comment 6 2013-11-22 11:03:35 PST
*** Bug 124774 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.