[WinCairo] Compile error when ACCELERATED_COMPOSITING is not used. https://bugs.webkit.org/show_bug.cgi?id=124773

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-11-22
Reviewed by Brent Fulgham.

* rendering/RenderView.cpp:
(WebCore::RenderView::paintBoxDecorations): Added USE(ACCELERATED_COMPOSITING) guard.

Canonical link: https://commits.webkit.org/142942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159688 268f45cc-cd09-0410-ab3c-d52691b4dbfc